--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Dec 08 08:40:35 UZT 2016
-systemProp.https.proxyPort=4480
-systemProp.http.proxyHost=192.168.0.4
-systemProp.https.proxyHost=192.168.0.4
-systemProp.http.proxyPort=4480
-systemProp.http.nonProxyHosts=192.168.0.*|localhost
+#ystemProp.https.proxyPort=4480
+#systemProp.http.proxyHost=192.168.0.4
+#systemProp.https.proxyHost=192.168.0.4
+#systemProp.http.proxyPort=4480
+#systemProp.http.nonProxyHosts=192.168.0.*|localhost
